# bazel-central-registry

./: .bazelignore  .bazelrc  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  BUILD  CODEOWNERS  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  bazel_registry.json  cppregpattern.20240709-125430.json  gloop.20260708-211359.json  grpc_kotlin.20250824-191240.json  incompatible_flags.yml  kubernetes_client_c.20250111-195131.json  metadata.schema.json  module_dot_bazel_version.patch  openscad_rules.20240909-235624.json  phtree-cpp.20260205-171123.json  requirements_lock.txt  rules_browsers.20251021-074642.json  rules_license.20220520-224552.json  rules_openscad.20240928-002431.json  s  sample.20240109-103058.json  sdformat.20241113-115617.json  sourcekit_bazel_bsp.20250821-103159.json  test.txt  z3.20250703-095908.json
.agent/workflows/: add_module_scaffolding.md  validate_module.md  verify_module_build.md
.bazelci/: migration_tool_presubmit.yml  presubmit.yml
.cursor/rules/: use-bazelisk.mdc
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  module_wanted.yaml
.github/workflows/: bcr_pr_review_approver.yml  bcr_pr_review_notifier.yml  comment_bot.yml  dismiss_approvals.yml  enforce_tooling_sync.yml  generate_module_diff.yml  handle_comment.yml  notify_maintainers.yml  review_prs.yml  skip_check.yml  stale.yml  sync_r2.yml  trigger_bcr_frontend_rebuild.yml  trigger_bcr_ui_rebuild.yml  update_requirements.yml  verify_source_urls.yml
docs/: README.md  attestations.md  bcr-contribution-guide.md  bcr-policies.md  code-of-conduct.md  maintainer-onboarding.md  mcp.md  stardoc.md  vrp-required-status-control.md
modules/abc/: metadata.json
modules/abseil-cpp/: metadata.json
modules/abseil-py/: metadata.json
modules/ada-url/: metadata.json
modules/aexml/: metadata.json
modules/alembic/: metadata.json
modules/alsa_lib/: metadata.json
modules/amqp-cpp/: metadata.json
modules/antlr4-cpp-runtime/: metadata.json
modules/aom/: metadata.json
modules/ape/: metadata.json
modules/apilark/: metadata.json
modules/apple_rules_lint/: metadata.json
modules/apple_support/: metadata.json
modules/apriltag/: metadata.json
modules/ar_hosek_sky_model/: metadata.json
modules/aravis/: metadata.json
modules/argparse/: metadata.json
modules/arm_gnu_toolchain/: metadata.json
modules/arolla/: metadata.json
modules/asc_swift/: metadata.json
modules/asio/: metadata.json
modules/asio-grpc/: metadata.json
modules/aspect_bazel_lib/: metadata.json
modules/aspect_gazelle_js/: metadata.json
modules/aspect_gazelle_prebuilt/: metadata.json
modules/aspect_rules_aws/: metadata.json
modules/aspect_rules_cypress/: metadata.json
modules/aspect_rules_esbuild/: metadata.json
modules/aspect_rules_jasmine/: metadata.json
modules/aspect_rules_jest/: metadata.json
modules/aspect_rules_js/: metadata.json
modules/aspect_rules_js_rust_wasm_bindgen/: metadata.json
modules/aspect_rules_lint/: metadata.json
modules/aspect_rules_lint_rust/: metadata.json
modules/aspect_rules_lint_scala/: metadata.json
modules/aspect_rules_py/: metadata.json
modules/aspect_rules_rollup/: metadata.json
modules/aspect_rules_swc/: metadata.json
modules/aspect_rules_terser/: metadata.json
modules/aspect_rules_ts/: metadata.json
modules/aspect_rules_webpack/: metadata.json
modules/aspect_tools_telemetry/: metadata.json
modules/assimp/: metadata.json
modules/at-spi2-core/: metadata.json
modules/attcs_octree/: metadata.json
modules/au/: metadata.json
modules/autodiff/: metadata.json
modules/avro-cpp/: metadata.json
modules/awk.bzl/: metadata.json
modules/aws-c-auth/: metadata.json
modules/aws-c-cal/: metadata.json
modules/aws-c-common/: metadata.json
modules/aws-c-compression/: metadata.json
modules/aws-c-event-stream/: metadata.json
modules/aws-c-http/: metadata.json
modules/aws-c-io/: metadata.json
modules/aws-c-mqtt/: metadata.json
modules/aws-c-s3/: metadata.json
modules/aws-c-sdkutils/: metadata.json
modules/aws-checksums/: metadata.json
modules/aws-in-a-box/: metadata.json
modules/aws-lc/: metadata.json
modules/aws-s2n-tls/: metadata.json
modules/aws_sdk/: metadata.json
modules/azure-core-cpp/: metadata.json
modules/azure-core-test-cpp/: metadata.json
modules/babylon/: metadata.json
modules/bazeldnf/v0.7.0-alpha2/: MODULE.bazel  presubmit.yml  source.json
modules/bazeldnf/v0.99.2-rc0/: MODULE.bazel  MODULE.bazel.orig  presubmit.yml  source.json
modules/bazeldnf/v0.99.2-rc0/patches/: MODULE.bazel.patch
modules/gateweavers_rules_vhdl/.0.1.0-rc1/: MODULE.bazel  attestations.json  source.json
modules/gateweavers_rules_vhdl/.0.1.0-rc1/patches/: module_dot_bazel_version.patch
modules/git/v2.52.0/overlay/ewah/: BUILD.bazel
modules/git/v2.52.0/overlay/odb/: BUILD.bazel
modules/go-tree-sitter/v0.0.0-20240827094217-dd81d9e9be82/: MODULE.bazel  presubmit.yml  source.json
modules/go-tree-sitter/v0.0.0-20240827094217-dd81d9e9be82/patches/: 01_add_module_file.patch  02_add_root_build_file.patch  03_add_autogenerated_build_files.patch  04_update_build_files.patch  05_exports_files.patch
modules/google/dagger/2.57.2/: MODULE.bazel  presubmit.yml  source.json
modules/hedron_compile_commands/v0.0.0-20250811213331-abb61a688167/: MODULE.bazel  presubmit.yml  source.json
modules/hedron_compile_commands/v0.0.0-20250811213331-abb61a688167/patches/: module_dot_bazel.patch
tools/: BUILD  README.md  add_module.py  attestations.py  bazel-vet  bcr_check.py  bcr_validation.py  bcr_validation_test.py  calc_integrity.py  cross_module_authz_poc.js  mcp_server.py  migrate_to_bzlmod.py  module_analyzer.py  module_selector.py  module_selector_test.py  package-lock.json  package.json  pnpm-lock.yaml  print_all_src_urls.py  registry.py  registry_test.py  requirements.in  requirements_lock.txt  sanity_check.py  setup_presubmit_repos.py  slsa.py  sync_to_gcs.sh  update_integrity.py  update_integrity_test.sh  verify_stable_archives.py  version_test.py
(+37943 files in other folders)
