module(
    name = "bazel_central_registry",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "2.1.2")
bazel_dep(name = "buildozer", version = "7.1.2")
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//tools:pnpm-lock.yaml",
)

buildozer_binary = use_extension("@buildozer//:buildozer_binary.bzl", "buildozer_binary")
use_repo(buildozer_binary, "buildozer_binary")

use_repo(npm, "npm")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

BAZEL_CI_COMMIT = "c12a4c95c302ad6fee34c1229714dcf9d314cd60"

http_file(
    name = "bazelci_py_file",
    integrity = "sha256-nkB6rJrq0w2T/yLxjgL9jR0JB07nGNtzY5aDQ1qrMeY=",
    downloaded_file_path = "bazelci.py",
    urls = ["https://raw.githubusercontent.com/bazelbuild/continuous-integration/%s/buildkite/bazelci.py" % BAZEL_CI_COMMIT],
)

http_file(
    name = "bcr_presubmit_py_file",
    integrity = "sha256-I3t2q/kMAHLDmiIqy+UUoUmWkHN+0bz9IwqikO7btDg=",
    downloaded_file_path = "bcr_presubmit.py",
    urls = ["https://raw.githubusercontent.com/bazelbuild/continuous-integration/%s/buildkite/bazel-central-registry/bcr_presubmit.py" % BAZEL_CI_COMMIT],
)
