module(
    name = "bazel_central_registry",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "2.3.3")
bazel_dep(name = "buildozer", version = "8.0.3")
bazel_dep(name = "rules_nodejs", version = "6.3.5")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "rules_shell", version = "0.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
    ignore_root_user_error = True,
)
use_repo(python, "python_3_11", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "pip")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.18.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//tools:pnpm-lock.yaml",
)

buildozer_binary = use_extension("@buildozer//:buildozer_binary.bzl", "buildozer_binary")
use_repo(buildozer_binary, "buildozer_binary")

use_repo(npm, "npm")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

BAZEL_CI_COMMIT = "3c2bc5dc463e7d35b0d14faca4e1aa0b2c04bfa9"

http_file(
    name = "bazelci_py_file",
    integrity = "sha256-7RzwSiBqmEUM87qAgPpAKA28v1MWWmjP22FLp8qSU0s=",
    downloaded_file_path = "bazelci.py",
    urls = ["https://raw.githubusercontent.com/bazelbuild/continuous-integration/%s/buildkite/bazelci.py" % BAZEL_CI_COMMIT],
)

http_file(
    name = "bcr_presubmit_py_file",
    integrity = "sha256-ksWL3Jl4IOcGs1f5uZpvtw/Qb/F5EWEL6khv3G5ATcA=",
    downloaded_file_path = "bcr_presubmit.py",
    urls = ["https://raw.githubusercontent.com/bazelbuild/continuous-integration/%s/buildkite/bazel-central-registry/bcr_presubmit.py" % BAZEL_CI_COMMIT],
)
