module(
    name = "bazel_central_registry",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "buildozer", version = "8.2.1")
bazel_dep(name = "rules_nodejs", version = "6.6.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
    ignore_root_user_error = True,
)
use_repo(python, "python_3_11", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "pip")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.18.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//tools:pnpm-lock.yaml",
)

buildozer_binary = use_extension("@buildozer//:buildozer_binary.bzl", "buildozer_binary")
use_repo(buildozer_binary, "buildozer_binary")

use_repo(npm, "npm")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

BAZEL_CI_COMMIT = "c323cb207d8bbde0ff23f6705dc5aafb085df924"

http_file(
    name = "bazelci_py_file",
    integrity = "sha256-ZO7sqCW2aaH+aj0ncBBFa9yL+KpL1421wvW32PSS1CA=",
    downloaded_file_path = "bazelci.py",
    urls = ["https://raw.githubusercontent.com/bazelbuild/continuous-integration/%s/buildkite/bazelci.py" % BAZEL_CI_COMMIT],
)

http_file(
    name = "bcr_presubmit_py_file",
    integrity = "sha256-T2txNFVlX2Cm+OSmu4YIgtvmKwGGDNaCrO+cvCNjmwA=",
    downloaded_file_path = "bcr_presubmit.py",
    urls = ["https://raw.githubusercontent.com/bazelbuild/continuous-integration/%s/buildkite/bazel-central-registry/bcr_presubmit.py" % BAZEL_CI_COMMIT],
)
