"bazelndf dependencies"

module(
    name = "bazeldnf",
    version = "v0.7.0-alpha2",
    bazel_compatibility = [">=6.0.0"],
    compatibility_level = 0,
)

bazeldnf_toolchain = use_extension("//bazeldnf:extensions.bzl", "bazeldnf_toolchain")
bazeldnf_toolchain.register()
use_repo(
    bazeldnf_toolchain,
    "bazeldnf_toolchains",
)

register_toolchains("@bazeldnf_toolchains//:all")

# bazeldnf starlark dependenies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_features", version = "1.14.0")

# if someone wants to build the bazeldnf toolchain from sources needs this set of dependencies
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_go", version = "0.52.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_adrg_xdg",
    "com_github_bazelbuild_buildtools",
    "com_github_crillab_gophersat",
    "com_github_onsi_gomega",
    "com_github_sassoftware_go_rpmutils",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "io_k8s_sigs_yaml",
    "org_golang_x_crypto",
    "org_golang_x_exp",
)

