"bazelndf dependencies"

module(
    name = "bazeldnf",
    version = "v0.99.2-rc0",
    bazel_compatibility = [">=7.0.0"],
    compatibility_level = 0,
)

bazeldnf_toolchain = use_extension("//bazeldnf:extensions.bzl", "bazeldnf_toolchain")
bazeldnf_toolchain.register()
use_repo(
    bazeldnf_toolchain,
    "bazeldnf_toolchains",
)

register_toolchains("@bazeldnf_toolchains//:all")

# bazeldnf starlark dependenies
bazel_dep(name = "bazel_skylib", version = "1.8.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_features", version = "1.38.0")
