module(
    name = "google/dagger",
    version = "2.57.2",
    compatibility_level = 0,
)

# The registry stores how to fetch the source (source.json below).
# If you want to publish transitive dependency hints, add bazel_dep() entries here.
# Example (uncomment and edit if you have known module deps):
# bazel_dep(name = "guava", version = "31.1-jre")
