load("//contrib/bazel:defs.bzl", "GIT_COPTS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "odb",
    srcs = ["//:streaming.c"],
    hdrs = ["//:streaming.h"],
    copts = GIT_COPTS,
    deps = [
        "//:convert",
        "//:environment",
        "//:git_compat_util",
        "//:object_file",
        "//:odb",
        "//:packfile",
        "//:replace_object",
        "//:repository",
        "//sha1dc",
        "//sha256",
    ],
)
